--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -30,7 +30,9 @@
         color: inherit;
         display: block;
       }
+    }
 
+    .media-body {
       p {
         margin-bottom: 10px;
       }
@@ -140,7 +142,7 @@
 // Search news forms
 
 .search-news {
-  padding: 5px 15px!important !important;
+  padding: 5px 15px!important;
 
   form {
     display: flex;
