--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -98,6 +98,9 @@
 // Arrangementer - midterkolonne:
 
 #calendarlist {
+  border-top: 1px solid @gray;
+  border-bottom: 1px solid @gray;
+
   .eventdate {
     margin-bottom: 5px;
   }
@@ -142,7 +145,7 @@
 // Search news forms
 
 .search-news {
-  padding: 5px 15px!important;
+  padding: 5px 15px !important;
 
   form {
     display: flex;
