--- a/less/panels.less
+++ b/less/panels.less
@@ -25,12 +25,13 @@
     }
   }
 
-  // ul:not(.list-group) {
-  //   li {
-  //     padding-top: 3px;
-  //     padding-bottom: 3px;
-  //   }
-  // }
+  ul:not([class]) {
+    // Target lists without any class attribute
+    li {
+      padding-top: 3px;
+      padding-bottom: 3px;
+    }
+  }
 }
 // Optional heading
 
