--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -188,3 +188,9 @@
     letter-spacing: 0.3px;
   }
 }
+
+.custom-search-results {
+  .nyhedsliste_dato {
+    color: @text-color!important;
+  }
+}
