--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -12,6 +12,9 @@
       display: block;
     }
   }
+  .media-left {
+    padding-right: 13px;
+  }
 
   .media {
     margin-top: 0;
@@ -34,7 +37,8 @@
 
     .media-body {
       p {
-        margin-bottom: 10px;
+        margin-top: 10px;
+        margin-bottom: 7px;
       }
     }
 
