--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -12,6 +12,7 @@
       display: block;
     }
   }
+
   .media-left {
     padding-right: 13px;
   }
@@ -43,6 +44,7 @@
     }
 
     .media-object {
+      width: 55px;
       .img-thumbnail;
     }
   }
