--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -146,6 +146,7 @@
 // Custom dropdown lists
 
 .linkslist {
+  margin: 10px 0;
   position: relative;
   background-color: @white-color;
 
@@ -185,6 +186,8 @@
       margin-top: 0;
       height: 0;
       transform: scaleY(0);
+      float: left;
+      .clearfix();
 
       li {
         a {
