--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -185,7 +185,7 @@
       padding-left: 0;
       margin-top: 0;
       height: 0;
-      // transform: scaleY(0);
+      transform: scaleY(0);
 
       li {
         a {
