--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -181,6 +181,8 @@
     }
 
     &~ul.menu-list {
+      &:extend(.clearfix all);
+      float: left;
       list-style: none;
       padding-left: 0;
       margin-top: 0;
