Hide accordion spacing caused by editor plugin

--- a/less/panels.less
+++ b/less/panels.less
@@ -440,3 +440,8 @@
     margin-top: 4px;
   }
 }
+
+// KU specific style to fix spacing in editor accordion plugin:
+.accordion-hidden {
+  display: none;
+}
