--- a/less/panels.less
+++ b/less/panels.less
@@ -436,7 +436,7 @@
     border-top: 1px solid @semi-white;
   }
 
-  + .panel-accordion {
+  + .panel-accordion, ~ .panel-accordion {
     margin-top: 4px;
   }
 }
