--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -28,6 +28,7 @@
 
     .media-heading {
       .nyhedsoverskrift();
+      margin-bottom: 7px;
 
       a {
         font-size: inherit;
@@ -38,14 +39,14 @@
 
     .media-body {
       p {
-        margin-top: 10px;
         margin-bottom: 7px;
       }
     }
 
     .media-object {
-      width: 55px;
       .img-thumbnail;
+      width: 55px;
+      box-sizing: content-box;
     }
   }
 
