--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -121,6 +121,10 @@
         & > .media-right {
           // Float images right for calendars in right column only
           float: right;
+
+          .media-object {
+            margin-bottom: 5px;
+          }
         }
       }
     }
