--- a/less/panels.less
+++ b/less/panels.less
@@ -56,11 +56,11 @@
   letter-spacing: 0.25px;
   color: inherit;
 
-  > .small > a,
+  > .small,
    > a,
    > small,
    > small > a,
-  > .small {
+  > .small > a {
     color: inherit;
   }
 }
@@ -80,8 +80,8 @@
 // any kind of custom content between the two.
 
 .panel {
-  > .list-group,
-  > .panel-collapse > .list-group {
+  > .panel-collapse > .list-group,
+  > .list-group {
     margin-bottom: 0;
 
     .list-group-item {
@@ -127,9 +127,9 @@
 // watch it go full width.
 
 .panel {
-  > .table,
+  > .panel-collapse > .table,
    > .table-responsive > .table,
-  > .panel-collapse > .table {
+  > .table {
     margin-bottom: 0;
 
     caption {
@@ -398,18 +398,6 @@
           overflow: hidden;
         }
       }
-
-      &.open {
-        //Open accordion
-        .panel-title {
-          a {
-            &:before {
-              content: "\2212";
-              right: 8px;
-            }
-          }
-        }
-      }
     }
 
     + .panel-collapse {
@@ -430,6 +418,15 @@
     // Open accordion
     &.open {
       background-color: @white-color;
+
+      .panel-title {
+        a {
+          &:before {
+            content: "\2212";
+            right: 8px;
+          }
+        }
+      }
     }
   }
 
