--- a/less/panels.less
+++ b/less/panels.less
@@ -56,11 +56,11 @@
   letter-spacing: 0.25px;
   color: inherit;
 
-  > .small,
+  > .small > a,
    > a,
    > small,
    > small > a,
-  > .small > a {
+  > .small {
     color: inherit;
   }
 }
@@ -80,8 +80,8 @@
 // any kind of custom content between the two.
 
 .panel {
-  > .panel-collapse > .list-group,
-  > .list-group {
+  > .list-group,
+  > .panel-collapse > .list-group {
     margin-bottom: 0;
 
     .list-group-item {
@@ -127,9 +127,9 @@
 // watch it go full width.
 
 .panel {
-  > .panel-collapse > .table,
+  > .table,
    > .table-responsive > .table,
-  > .table {
+  > .panel-collapse > .table {
     margin-bottom: 0;
 
     caption {
@@ -396,6 +396,13 @@
           right: 7px;
           width: 20px;
           overflow: hidden;
+        }
+
+        &:not(.collapsed) {
+          &:before {
+            content: "\2212";
+            right: 8px;
+          }
         }
       }
     }
