New table style

--- a/less/tables.less
+++ b/less/tables.less
@@ -191,6 +191,11 @@ th {
   }
 }
 
+.table-cellspacing {
+  border-spacing: 5px;
+  border-collapse: separate;
+}
+
 // Table cell sizing
 //
 // Reset default table behavior
