--- a/less/tables.less
+++ b/less/tables.less
@@ -191,6 +191,8 @@ th {
   }
 }
 
+
+// KU specific - replaces >table cellspacing="5">:
 .table-cellspacing {
   border-spacing: 5px;
   border-collapse: separate;
