--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -334,7 +334,7 @@
       width: 100%;
       letter-spacing: 0.7px;
       line-height: @line-height-small;
-      padding: 16px 20px 20px 30px;
+      padding: 15px;
       font-size: 14px;
       color: @text-color;
       background: @gray-f5;
@@ -414,6 +414,7 @@
     &.slick-current {
       .caption {
         font-size: 16px;
+        padding: 12px 15px 10px 20px;
         overflow: hidden;
         position: absolute;
         left: 0;
@@ -430,6 +431,7 @@
           padding: 15px;
           width: 45%;
           height: 100%;
+          padding: 16px 20px 20px 30px;
         }
 
         &.textblock-right {
@@ -438,6 +440,7 @@
           padding: 15px;
           width: 45%;
           height: 100%;
+          padding: 16px 30px 20px 20px;
         }
 
         &.textlabel-left {
@@ -446,6 +449,7 @@
           transform: translateY(-50%);
           width: 45%;
           min-height: 70%;
+          padding: 16px 20px 20px 30px;
           .border-right-radius(2px);
         }
 
@@ -457,6 +461,7 @@
           transform: translateY(-50%);
           width: 50%;
           min-height: 70%;
+          padding: 16px 30px 20px 20px;
           .border-left-radius(2px);
         }
 
