--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -215,7 +215,7 @@
 
   &:before {
     font-size: 32px;
-    opacity: 0.65;
+    opacity: 0.55;
     color: @white-color;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -230,7 +230,7 @@
 .slick-slider {
   &:hover {
     .slick-prev {
-      left: -3;
+      left: -3px;
       .icon-arrow-back;
 
       &:before {
