--- a/less/variables.less
+++ b/less/variables.less
@@ -129,6 +129,7 @@
 
 @ku-twitter:            #1da1f2;
 @ku-facebook:           #4267b2;
+@ku-linkedin:           #0073b1;
 @ku-futurity:           #ffa64d;
 @ku-conversation:       #d8352a;
 
