--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -42,6 +42,10 @@
     <button type="button" class="btn btn-warning">Warning</button>
     <button type="button" class="btn btn-danger">Danger</button>
     <button type="button" class="btn btn-link">Link</button>
+    <div class="clearfix"></div>
+    <button type="button" class="btn btn-social facebook" onclick="shareURL('facebook')">Share on</button>
+    <button type="button" class="btn btn-social linkedin" onclick="shareURL('linkedin')">Share on</button>
+    <button type="button" class="btn btn-social twitter" onclick="shareURL('twitter')">Share on</button>
   </div>
 {% highlight html %}
 <!-- Standard button -->
@@ -64,8 +68,16 @@
 
 <!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
 <button type="button" class="btn btn-link">Link</button>
-{% endhighlight %}
 
+<!-- Share url on Facebook -->
+<button type="button" class="btn btn-social facebook" onclick="shareURL('facebook')">Share on</button>
+
+<!-- Share url on LinkedIn -->
+<button type="button" class="btn btn-social linkedin" onclick="shareURL('linkedin')">Share on</button>
+
+<!-- Share url on Twitter -->
+<button type="button" class="btn btn-social twitter" onclick="shareURL('twitter')">Share on</button>
+{% endhighlight %}
   <div class="bs-callout bs-callout-warning" id="callout-buttons-color-accessibility">
     <h4>Conveying meaning to assistive technologies</h4>
     <p>Using color to add meaning to a button only provides a visual indication, which will not be conveyed to users of assistive technologies – such as screen readers. Ensure that information denoted by the color is either obvious from the content itself (the visible text of the button), or is included through alternative means, such as additional text hidden with the <code>.sr-only</code> class.</p>
