--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -59,6 +59,7 @@
 // KU specific
 //@import "ku-visited-links.less";
 @import "ku-misc.less";
+@import "ku-cms-components.less";
 @import "ku-branding.less";
 @import "ku-leftmenu.less";
 @import "ku-mobile-menu.less";
