--- a/less/type.less
+++ b/less/type.less
@@ -106,7 +106,7 @@ h6 {
 // -------------------------
 
 p {
-  margin: 0 0 20px 0;
+  margin: 8px 0 20px 0;
 
   &:empty {
     //Hide empty p-tags comming from the editor
