--- a/less/type.less
+++ b/less/type.less
@@ -377,6 +377,14 @@ blockquote {
     float: none;
   }
 }
+
+.rightbox,
+.single-column .column1 {
+  blockquote {
+    width: 100%!important;
+  }
+}
+
 // Opposite alignment of blockquote
 //
 // .blockquote-reverse {
