--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -58,6 +58,10 @@
       margin-top: 5px;
     }
   }
+
+  p {
+    margin-bottom: 10px;
+  }
 }
 @media screen and (min-width: @screen-sm) {
   .advanced-list {
