--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -2,7 +2,6 @@
 // Global menu news
 
 .media-list {
-  margin-top: 0!important;
 
   .media-left,
   .media-right {
@@ -21,6 +20,9 @@
     margin-top: 0;
     padding-top: 15px;
     padding-bottom: 5px;
+    &:first-child {
+      padding-top: 0;
+    }
 
     &+ .media {
       border-top: 1px solid @gray;
