--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -38,7 +38,9 @@
 .figure,
 figure {
   // Ensures the caption's text aligns with the image.
-  display: table;
+  //display: table;
+  display: inline-block;
+  max-width: 100%;
   clear: both;
 
   &.image {
@@ -98,7 +100,7 @@ figcaption {
   border-bottom: 1px solid @figure-caption-border-color;
   padding: 10px 10px 10px 0;
   width: 100%;
-  display: table-caption;
+  //display: table-caption;
   caption-side: bottom;
 }
 
