--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -107,6 +107,7 @@
 // Arrangementer - midterkolonne:
 
 #calendarlist {
+  padding-top: 15px;
   border-top: 1px solid @gray;
   border-bottom: 1px solid @gray;
 
