--- a/less/tables.less
+++ b/less/tables.less
@@ -41,6 +41,7 @@ th {
 .table {
   width: 100%;
   max-width: 100%;
+  table-layout: fixed;
   margin-bottom: @line-height-computed;
   // Cells
   > tfoot,
