--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -38,9 +38,9 @@ nav {
 
 .main-content {
   .row {
-    + .row {
-      margin-top: @grid-gutter-height;
-    }
+
+      margin-bottom: @grid-gutter-height;
+
   }
   @media (max-width: @screen-sm-max) {
     [class*="col-"] {
@@ -77,9 +77,9 @@ nav {
       }
     }
 
-    + .row {
-      margin-top: @grid-gutter-height;
-    }
+
+      margin-bottom: @grid-gutter-height;
+
   }
 }
 
