--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -117,6 +117,11 @@ nav {
 //   }
 // }
 
+.rightbox-normal, .flexiblebox-as-rightbox, .rightbox-calendar-widget, .rightBoxPicture {
+
+margin-bottom: @grid-gutter-height;
+}
+
 .right-side {
   .pull-right;
   @media (min-width: @screen-sm) {
@@ -131,9 +136,9 @@ nav {
     //   margin-top: @grid-gutter-height;
     // }
   }
-  @media (max-width: @screen-sm-max) {
-    margin-top: @grid-gutter-height;
-  }
+  // @media (max-width: @screen-sm-max) {
+  //   margin-top: @grid-gutter-height;
+  // }
 
   .rightBoxPicture {
     .panel-head {
