--- a/less/panels.less
+++ b/less/panels.less
@@ -9,9 +9,9 @@
   //border: 1px solid transparent;
   //border-radius: @panel-border-radius;
   // KU:
-  & + .panel {
-    margin-top: @grid-gutter-height;
-  }
+  // & + .panel {
+  //   margin-top: @grid-gutter-height;
+  // }
 }
 // Panel contents
 
