--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -353,7 +353,7 @@
 
       &.subcolor_5 {
         background: @ku-gray;
-        color: @ku-gridbox-text;
+        color: @text-color;
         @media (min-width: @screen-sm) {
           background: fade(@ku-gray, 90%);
         }
@@ -365,7 +365,7 @@
 
       &.subcolor_6 {
         background: @gray-f5;
-        color: @ku-gridbox-text;
+        color: @text-color;
         @media (min-width: @screen-sm) {
           background: fade(@white-color, 90%);
         }
@@ -454,12 +454,12 @@
         }
 
         &.textlabel-right {
-          top: 45%;
+          top: 50%;
           bottom: auto;
           right: 0;
           left: auto;
           transform: translateY(-50%);
-          width: 50%;
+          width: 45%;
           min-height: 70%;
           padding: 16px 30px 20px 20px;
           .border-left-radius(2px);
