--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -39,17 +39,19 @@ nav {
 .main-content {
   .row {
     margin-bottom: @grid-gutter-height;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
   @media (max-width: @screen-sm-max) {
     [class*="col-"] {
-      &:not(:last-child) {
-        margin-bottom: @grid-gutter-height;
+      margin-bottom: @grid-gutter-height;
+
+      &:last-child {
+        margin-bottom: 0;
       }
     }
-  }
-
-  & > p:first-child {
-    margin-top: 0;
   }
 }
 
@@ -86,8 +88,10 @@ nav {
 #gridsidebar {
   .row {
     [class*="col-"] {
-      &:not(:last-child) {
-        margin-bottom: @grid-gutter-height;
+      margin-bottom: @grid-gutter-height;
+
+      &:last-child {
+        margin-bottom: 0;
       }
     }
     margin-bottom: @grid-gutter-height;
