--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -131,11 +131,11 @@ nav {
       margin-top: @grid-gutter-height;
     }
 
-    .rightbox-normal:first-child {
-      margin-top: 8px;
+    .flexiblebox:first-child {
+      margin-top: @grid-gutter-height;
     }
 
-    .flexiblebox:first-child {
+    .rightbox-normal:first-child {
       margin-top: @grid-gutter-height;
     }
   }
