--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -401,15 +401,10 @@
   }
   @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
     .caption {
-      // Special caption width for iPad
-      // &.textblock-left,
-      // &.textblock-right,
-      // &.textlabel-left,
-      // &.textlabel-right {
+      // Special caption iPad
         position: absolute!important;
         left: 0;
         bottom: 0;
-      // }
     }
   }
   @media (min-width: @screen-md) {
