--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -7,3 +7,13 @@
     display: none;
   }
 }
+
+.rightBoxPicture {
+  .panel-head {
+    display: none;
+  }
+
+  .panel-body {
+    border-top: 0;
+  }
+}
