--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -115,6 +115,11 @@ nav {
       margin-bottom: 0;
     }
   }
+  .row {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .flexiblebox-as-rightbox,
@@ -137,16 +142,6 @@ nav {
 
     .rightbox-normal:first-child {
       margin-top: @grid-gutter-height;
-    }
-  }
-
-  .rightBoxPicture {
-    .panel-head {
-      display: none;
-    }
-
-    .panel-body {
-      border-top: 0;
     }
   }
 }
