--- a/less/variables.less
+++ b/less/variables.less
@@ -133,6 +133,9 @@
 @ku-futurity:           #ffa64d;
 @ku-conversation:       #d8352a;
 
+// Fact box colors:
+@factbox-bg:            #d0dbe1;
+
 // KU gradients
 
 @ku-entry-start:        #f3f3f1;
