--- a/less/type.less
+++ b/less/type.less
@@ -393,8 +393,7 @@ blockquote {
   }
 }
 
-.rightbox,
-.single-column .column1 {
+.rightbox, .column1 {
   blockquote {
     width: 100%!important;
   }
