--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -142,6 +142,7 @@
     <li><a href="#list-group-custom-content">Custom content</a></li>
   </ul>
 </li>
+<li><a href="#ku-factboxes">KU fact boxes</a></li>
 <li>
   <a href="#panels">Panels</a>
   <ul class="nav">
