--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -248,7 +248,12 @@
 .factbox {
   background-color: @factbox-bg;
   font-size: 12px;
+  padding: 15px;
   width: 45%;
+
+  h3 {
+    margin: 0;
+  }
   &::before {
     .icon;
     content: @icon-quote;
