--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -1,6 +1,6 @@
 /* CSS for Instagram feeds stacked in batches of 1-6 images rotating
 Needs html like this:
-<div id="ig" data-account="university_of_copenhagen" data-token="xxxx" data-images="3" class="gridbox with-img  size2">
+<div id="ig" data-account="university_of_copenhagen" data-token="xxxx" data-images="3" class="instagram gridbox with-img  size2">
   <div class="box1">
   <a href="https://www.instagram.com/university_of_copenhagen/">
     <div class="header">@university_of_copenhagen på Instagram</div>
@@ -11,19 +11,19 @@ Needs html like this:
   </div>
 </div>
 */
-#ig.gridbox {
+.instagram.gridbox {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
   visibility: hidden;
 }
 
-#ig.gridbox::before {
+.instagram.gridbox::before {
   z-index: 101;
   cursor: pointer;
 }
 
-#ig.gridbox .box1 {
+.instagram.gridbox .box1 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -34,17 +34,17 @@ Needs html like this:
   z-index: 100;
 }
 
-#ig.gridbox .header, #ig.gridbox.with-img:hover .header {
+.instagram.gridbox .header, .instagram.gridbox.with-img:hover .header {
   color: #606060;
   background: rgba(255, 255, 255, .9);
 }
 
-#ig:hover a {
+.instagram:hover a {
   color: inherit;
   display: block;
 }
 
-#ig:hover img {
+.instagram:hover img {
   -webkit-filter: none;
   filter: none;
 }
